--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="homePage.html">Labino Boats</a>
+        <a class="navbar-brand" href="index.html">Labino Boats</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link active" href="homePage.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="toursPage.html">Tours</a></li>
                 <li class="nav-item"><a class="nav-link" href="galeryPage.html">Gallery</a></li>
                 <li class="nav-item"><a class="nav-link" href="contactPage.html">Contact</a></li>
