--- a/galeryPage.html
+++ b/galeryPage.html
@@ -63,16 +63,16 @@
 <div class="container" style="padding-bottom: 50px">
     <div class="row g-4">
         <div class="col-md-4 col-sm-6">
-            <img src="images/2.png" class="gallery-img" alt="Gallery Image 1">
+            <img src="images/viber_image_2025-04-22_16-19-20-591.jpg" class="gallery-img" alt="Gallery Image 1">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/ohridPhoto.png" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/viber_image_2025-04-22_16-19-21-012.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/ohrid-north-macedonia-10.jpg" class="gallery-img" alt="Gallery Image 3">
+            <img src="images/viber_image_2025-04-22_16-19-21-363.jpg" class="gallery-img" alt="Gallery Image 3">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/screen_2x-1200x800.jpg" class="gallery-img" alt="Gallery Image 4">
+            <img src="images/viber_image_2025-04-22_16-19-22-035.jpg" class="gallery-img" alt="Gallery Image 4">
         </div>
         <div class="col-md-4 col-sm-6">
             <img src="images/unnamed.jpg" class="gallery-img" alt="Gallery Image 5">
@@ -81,11 +81,43 @@
             <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/ohridPhoto.png" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/viber_image_2025-04-22_16-19-22-319.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
         <div class="col-md-4 col-sm-6">
-            <img src="images/ohridPhoto.png" class="gallery-img" alt="Gallery Image 2">
+            <img src="images/viber_image_2025-04-22_16-19-22-752.jpg" class="gallery-img" alt="Gallery Image 2">
         </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/viber_image_2025-04-22_16-19-22-752.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/viber_image_2025-04-22_16-19-23-005.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/viber_image_2025-04-22_16-19-23-429.jpg" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+        <div class="col-md-4 col-sm-6">
+            <img src="images/2.png" class="gallery-img" alt="Gallery Image 6">
+        </div>
+
+
     </div>
 </div>
 <footer class="bg-dark text-white text-center py-2">
