--- a/toursPage.html
+++ b/toursPage.html
@@ -99,21 +99,22 @@
     </p>
     <div>
     <div class="tour-card">
-        <h4 class="fw-bold mb-3">City Explorer Tour</h4>
-        <img src="images/ohridPhoto.png" alt="City Explorer" class="tour-img mb-3" />
+        <h4 class="fw-bold mb-3">Mini Ohrid Tour</h4>
+        <img src="images/mini.jpg" alt="City Explorer" class="tour-img mb-3" />
 
         <p class="text-muted">
-            Immerse yourself in the vibrant culture and rich history of our city with our comprehensive City Explorer Tour. Perfect for first-time visitors and history enthusiasts alike.
+            The tour begins at the Ohrid harbor, where you board the catamaran. First, you pass by the Old Town, enjoying views of its ancient architecture and historical charm from the water. The catamaran then sails past Kaneo, one of the most beautiful and scenic spots in Ohrid, known for its church sitting on a steep cliff above the lake, offering breathtaking views.
         </p>
+        <p class="text-muted">Next, the catamaran passes Labino Beach, a peaceful spot by the water, where you can admire its calm beauty from the boat. The tour concludes with a return to the harbor, offering you a chance to take in the stunning landscapes of the lake and its surroundings.</p>
 
         <div class="row text-center mt-4 mb-3">
             <div class="col-md-4">
                 <div class="info-label">Duration</div>
-                <div class="info-value">4 hours</div>
+                <div class="info-value">30 minutes</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Price</div>
-                <div class="info-value">$49 per person</div>
+                <div class="info-value">25€</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
@@ -125,10 +126,9 @@
 
         <div class="highlight mb-4">
             <h6 class="fw-semibold mb-2">Highlights</h6>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Historic Downtown District</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Cultural Arts Center</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Local Market Experience</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Riverside Walk</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Old Town Ohrid</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Church of St. John at Kaneo</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Labino Beach </p>
         </div>
 
         <hr />
@@ -136,10 +136,72 @@
         <div class="includes">
             <h6 class="fw-semibold mb-3">Includes</h6>
             <div class="row">
-                <div class="col-3"><i class="fas fa-coffee"></i>Coffee Break</div>
-                <div class="col-3"><i class="fas fa-bus-alt"></i>Transport</div>
-                <div class="col-3"><i class="fas fa-user-tie"></i>Guide</div>
-                <div class="col-3"><i class="fas fa-camera"></i>Photo Stops</div>
+                <div class="col-3"><i class="fas fa-user-tie"><img src="icons/user.png" style="margin-left: 5px"></i>Guide</div>
+            </div>
+        </div>
+        <hr />
+        <div class="button-book mb-3">
+            <a href="contactPage.html" class="btn" style="width: 100%;
+            height: 50px;
+            object-fit: cover;
+            margin-top: 10px;
+            padding-top: 10px;
+            background: #6dd5ed;
+            border-radius: 20px;
+            font-weight: bold;
+            color: white;
+            border-color: white;
+            font-size: large;
+            text-align: center">Book now</a>
+        </div>
+    </div><div class="tour-card">
+        <h4 class="fw-bold mb-3">Medium Ohrid Tour</h4>
+        <img src="images/medium.jpg" alt="City Explorer" class="tour-img mb-3" />
+
+        <p class="text-muted">
+            Discover the beauty of Ohrid from a unique perspective aboard a relaxing catamaran tour. The journey begins at the Ohrid Harbor, taking you along the shoreline with panoramic views of the city's most iconic landmarks.
+        </p>
+        <p class="text-muted">
+            You’ll cruise past the Old Town, known for its charming stone houses, narrow streets, and rich cultural heritage. The tour continues with a breathtaking view of the Church of St. John at Kaneo, beautifully situated on a cliff above the lake.
+        </p>
+        <p class="text-muted">
+            Next, glide by Labino Beach, a peaceful and scenic spot perfect for enjoying the natural beauty of the lakeside. The route also includes a view of Villa "Biljana", the official residence used for hosting dignitaries, nestled among greenery above the lake.
+        </p>
+        <p class="text-muted">
+            The tour wraps up with a relaxing return to the Ohrid Harbor, leaving you with unforgettable views and a new appreciation for the city's lakeside charm.
+        </p>
+
+        <div class="row text-center mt-4 mb-3">
+            <div class="col-md-4">
+                <div class="info-label">Duration</div>
+                <div class="info-value">1 hour</div>
+            </div>
+            <div class="col-md-4">
+                <div class="info-label">Price</div>
+                <div class="info-value">50€</div>
+            </div>
+            <div class="col-md-4">
+                <div class="info-label">Group Size</div>
+                <div class="info-value">Max 12 people</div>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="highlight mb-4">
+            <h6 class="fw-semibold mb-2">Highlights</h6>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Old Town Ohrid</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Church of St. John at Kaneo</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Labino Beach</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Villa "Biljana"</p>
+        </div>
+
+        <hr />
+
+        <div class="includes">
+            <h6 class="fw-semibold mb-3">Includes</h6>
+            <div class="row">
+                <div class="col-3"><i class="fas fa-user-tie"><img src="icons/user.png" style="margin-left: 5px"></i>Guide</div>
             </div>
         </div>
         <hr />
@@ -160,21 +222,39 @@
     </div>
     </div>
     <div class="tour-card">
-        <h4 class="fw-bold mb-3">City Explorer Tour</h4>
-        <img src="images/2.png" alt="City Explorer" class="tour-img mb-3" />
+        <h4 class="fw-bold mb-3">Full-Day Adventure</h4>
+        <img src="images/sveti-naum-ohridski.jpg" alt="City Explorer" class="tour-img mb-3" />
 
         <p class="text-muted">
-            Immerse yourself in the vibrant culture and rich history of our city with our comprehensive City Explorer Tour. Perfect for first-time visitors and history enthusiasts alike.
+            The catamaran tour starts from the Ohrid Harbor, offering a scenic and relaxing ride along the eastern shore of Lake Ohrid.
+        </p>
+        <p class="text-muted">
+            The first landmark you pass is the Tito’s Villa, a historical residence hidden among greenery. Shortly after, the tour continues past the lakeside village of Peštani, known for its traditional houses and peaceful atmosphere.
+        </p>
+        <p class="text-muted">
+            The first stop is at the Bay of Bones – Gradishte, an archaeological site and open-air museum built on the water, where you'll have a 30-minute break to explore.
+        </p>
+        <p class="text-muted">
+            Back on the catamaran, the journey continues past the charming village of Trpejca, often called the “Macedonian Saint-Tropez” for its crystal-clear waters and beautiful setting.
+        </p>
+        <p class="text-muted">
+            Next, the tour heads toward the Monastery "Holy Virgin of Zaumska", a hidden spiritual gem accessible only by water. Here, you’ll enjoy a 20-minute stop, ideal for a peaceful walk and some photos.
+        </p>
+        <p class="text-muted">
+            Finally, you arrive at the St. Naum Monastery, one of the most significant religious and historical sites in North Macedonia. You’ll have a 2-hour break to explore the monastery complex, visit the springs of the Crn Drim River, or relax by the lake.
+        </p>
+        <p class="text-muted">
+            The tour ends with a calm and scenic return to Ohrid Harbor, completing an unforgettable experience of nature, history, and culture from the waters of Lake Ohrid.
         </p>
 
         <div class="row text-center mt-4 mb-3">
             <div class="col-md-4">
                 <div class="info-label">Duration</div>
-                <div class="info-value">4 hours</div>
+                <div class="info-value">6 hours</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Price</div>
-                <div class="info-value">$49 per person</div>
+                <div class="info-value">25€ per person</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
@@ -186,10 +266,13 @@
 
         <div class="highlight mb-4">
             <h6 class="fw-semibold mb-2">Highlights</h6>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Historic Downtown District</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Cultural Arts Center</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Local Market Experience</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Riverside Walk</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Villa "Biljana"</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Village of Peštani</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Bay of Bones – Gradishte (30 minutes)</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Village of Trpejca</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Monastery "Holy Virgin of Zaumska" (20 minutes)</p>
+            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Monastery of Saint Naum (2 Hours)</p>
+
         </div>
 
         <hr />
@@ -197,10 +280,10 @@
         <div class="includes">
             <h6 class="fw-semibold mb-3">Includes</h6>
             <div class="row">
-                <div class="col-3"><i class="fas fa-coffee"></i>Coffee Break</div>
-                <div class="col-3"><i class="fas fa-bus-alt"></i>Transport</div>
-                <div class="col-3"><i class="fas fa-user-tie"></i>Guide</div>
-                <div class="col-3"><i class="fas fa-camera"></i>Photo Stops</div>
+                <div class="col-3"><i class="fas fa-coffee"><img src="icons/water.png" style="margin-left: 5px"></i>Drinks</div>
+                <div class="col-3"><i class="fas fa-user-tie"><img src="icons/user.png" style="margin-left: 5px"></i>Guide</div>
+                <div class="col-3"><i class="fas fa-user-tie"><img src="icons/history.png" style="margin-left: 5px"></i>Breaks</div>
+                <div class="col-3"><i class="fas fa-camera"><img src="icons/photo-camera.png" style="margin-left: 5px"></i>Photo Stops</div>
             </div>
         </div>
         <hr />
@@ -220,50 +303,27 @@
         </div>
     </div>
     <div class="tour-card">
-        <h4 class="fw-bold mb-3">City Explorer Tour</h4>
-        <img src="images/2.png" alt="City Explorer" class="tour-img mb-3" />
+        <h4 class="fw-bold mb-3">Private Charter</h4>
+        <img src="images/private.jpg" alt="Ohrid Boat" class="tour-img mb-3" />
 
         <p class="text-muted">
-            Immerse yourself in the vibrant culture and rich history of our city with our comprehensive City Explorer Tour. Perfect for first-time visitors and history enthusiasts alike.
+            Customize your own experience with our private catamaran charter. Perfect for special occasions, proposals, or family gatherings.
         </p>
 
         <div class="row text-center mt-4 mb-3">
             <div class="col-md-4">
                 <div class="info-label">Duration</div>
-                <div class="info-value">4 hours</div>
+                <div class="info-value">6 hours</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Price</div>
-                <div class="info-value">$49 per person</div>
+                <div class="info-value">250€</div>
             </div>
             <div class="col-md-4">
                 <div class="info-label">Group Size</div>
                 <div class="info-value">Max 12 people</div>
             </div>
         </div>
-
-        <hr />
-
-        <div class="highlight mb-4">
-            <h6 class="fw-semibold mb-2">Highlights</h6>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Historic Downtown District</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Cultural Arts Center</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Local Market Experience</p>
-            <p><img src="icons/check.png"><i class="fas fa-check-circle"></i>Riverside Walk</p>
-        </div>
-
-        <hr />
-
-        <div class="includes">
-            <h6 class="fw-semibold mb-3">Includes</h6>
-            <div class="row">
-                <div class="col-3"><i class="fas fa-coffee"></i>Coffee Break</div>
-                <div class="col-3"><i class="fas fa-bus-alt"></i>Transport</div>
-                <div class="col-3"><i class="fas fa-user-tie"></i>Guide</div>
-                <div class="col-3"><i class="fas fa-camera"></i>Photo Stops</div>
-            </div>
-        </div>
-        <hr />
         <div class="button-book mb-3">
             <a href="contactPage.html" class="btn" style="width: 100%;
             height: 50px;
