--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             padding: 100px 0;
             text-align: center;
         }
+        .card{
+            margin: 20px;
+        }
         .section-bg {
             background-color: #f3f6f9;
             border-radius: 20px;
@@ -94,7 +97,7 @@
                 <p>Explore the beauty of Lake Ohrid from the water.</p>
             </div>
         </div>
-        <img src="images/ohridPhoto.png" class="d-block w-100 carousel-img" alt="Ohrid">
+        <img src="images/medium.jpg" class="d-block w-100 carousel-img" alt="Ohrid boats tours">
     </div>
 </section>
 <section class="py-5">
@@ -107,10 +110,10 @@
         <div id="ohridCarousel" class="carousel slide mx-auto" data-bs-ride="carousel" style="max-width: 800px;">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/ohridPhoto.png" style="max-height: 451px; max-width: 800px" class="d-block w-100 carousel-img" alt="Ohrid">
+                    <img src="images/viber_image_2025-04-22_16-19-22-752.jpg" style="max-height: 451px;" class="d-block w-100 carousel-img" alt="Ohrid">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/2.png" class="d-block w-100 carousel-img" style="max-height: 421px;" alt="Ohrid">
+                    <img src="images/viber_image_2025-04-22_16-19-22-035.jpg" class="d-block w-100 carousel-img" style="max-height: 421px;" alt="Ohrid">
                 </div>
                 <!-- Add more carousel-item blocks if needed -->
             </div>
@@ -130,27 +133,38 @@
         <div class="row mt-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/ohrid-north-macedonia-10.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px;">
+                    <img src="images/mini.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px;">
                     <div class="card-body">
-                        <h5 class="card-title">Sunset Cruise</h5>
-                        <p class="card-text">Experience the magic of Lake Ohrid at sunset with our 2-hour evening cruise. Includes complimentary drinks and snacks.</p>
+                        <h5 class="card-title">Mini Ohrid Tour</h5>
+                        <p class="card-text">A relaxing catamaran ride starting from Ohrid harbor, passing by the Old Town, the cliffside church of Kaneo, and the peaceful Labino Beach, offering stunning views of the city's heritage and the lake's natural beauty.</p>
+                        <a href="toursPage.html" class="btn btn-outline-primary">Learn More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" >
+                <div class="card">
+                    <img src="images/medium.jpg" class="card-img-top" alt="Ohrid Boat" style="min-height: 300px;">
+                    <div class="card-body">
+                        <h5 class="card-title">Medium Ohrid Tour</h5>
+                        <p class="card-text" style="min-height: 119px;"> Enjoy a relaxing catamaran ride with panoramic views of the Old Town, Kaneo, Labino Beach, and Villa "Biljana", ending with a scenic return to Ohrid Harbor.                        </p>
+
                         <a href="toursPage.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/unnamed.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px;">
+                    <img src="images/sveti-naum-ohridski.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px;">
                     <div class="card-body">
                         <h5 class="card-title">Full-Day Adventure</h5>
-                        <p class="card-text">Explore the entire lake with stops at St. Naum Monastery, Bay of Bones, and swimming in crystal clear waters. Lunch included.</p>
+                        <p class="card-text" style="min-height: 119px;">Explore the entire lake with stops at St. Naum Monastery, Bay of Bones, and Monastery "Holy Virgin of Zaumska". Drinks included.</p>
                         <a href="toursPage.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/screen_2x-1200x800.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px;">
+                    <img src="images/private2.jpg" class="card-img-top" alt="Ohrid Boat Tours" style="min-height: 300px; max-height: 300px">
                     <div class="card-body">
                         <h5 class="card-title">Private Charter</h5>
                         <p class="card-text">Customize your own experience with our private catamaran charter. Perfect for special occasions, proposals, or family gatherings.</p>
