--- a/contactPage.html
+++ b/contactPage.html
@@ -19,7 +19,7 @@
             border-radius: 25px;
             padding: 60px 30px;
             margin: 98px auto;
-            max-width: 700px;
+            max-width: 80%;
             box-shadow: 0 8px 25px rgba(0,0,0,0.2);
             text-align: center;
             object-fit: cover;
@@ -67,6 +67,31 @@
         .contact-container:hover{
             transform: scale(1.03);
         }
+        .map-container {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            padding: 20px;
+            border-radius: 25px;
+            margin: 30px auto;
+            max-width: 700px;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+            border: 2px solid rgba(255, 255, 255, 0.4);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .map-container iframe {
+            width: 100%;
+            height: 350px;
+            border: none;
+            border-radius: 15px;
+        }
+
+        .map-container:hover {
+            transform: scale(1.02);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
+        }
+
     </style>
 </head>
 <body>
@@ -92,19 +117,27 @@
 
     <div class="contact-item">
         <i class="bi bi-telephone-fill"></i>
-        <span><strong>+389 77 604 492</strong> / <strong>+389 78 697 031</strong></span>
+        <span><strong ><a href="tel:+38977604492">+389 77 604 492</a></strong> / <strong ><a href="tel:+38978697031">+389 78 697 031</a></strong></span>
     </div>
 
     <div class="contact-item">
         <i class="bi bi-envelope-fill"></i>
-        <span>pazarkoskidaniel123@gmail.com</span>
+        <span ><a href="mailto:labinoboats@gmail.com">labinoboats@gmail.com</a></span>
     </div>
 
     <div class="contact-item">
         <i class="bi bi-geo-alt-fill"></i>
-        <span>Port of Ohrid, Ohrid 6000</span>
+        <span><a href="https://maps.app.goo.gl/amQbt6umYDbP67VAA">Port of Ohrid, Ohrid 6000</a></span>
+    </div>
+    <div class="map-container text-center">
+        <iframe
+                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3006.0351682705495!2d20.799563!3d41.111923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDA2JzQyLjkiTiAyMMKwNDcnNTguNCJF!5e0!3m2!1smk!2smk!4v1745522824478!5m2!1smk!2smk"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </div>
 </div>
+
+
 
 <footer class="bg-dark text-white text-center py-2">
     <div class="container">
